Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4978,5 +4978,124 @@
   "c4f7d503-ed7f-4526-b082-28dc2ab7cb17": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. Je kan dit niet ongedaan maken.",
   "4bbc8b26-74b8-43e2-95e7-86fa00ca517b": "Ben je 100% zeker dat je jouw account wilt verwijderen? Vul dan je huidige e-mailadres in ter bevestiging. Al jouw gegevens gaan verloren. Je kan dit niet ongedaan maken.",
   "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Totaal",
-  "8e74fdc8-06e0-4686-8ca4-dca7e28aebe3": "Inloggen met Google"
+  "8e74fdc8-06e0-4686-8ca4-dca7e28aebe3": "Inloggen met Google",
+  "1f64237b-84c4-43e7-b752-2875fd1eb075": "Je kan de organisator niet wijzigen als er al inschrijvingen gekoppeld zijn aan deze activiteit. Verwijder dan eerst de inschrijvingen.",
+  "737f9ff3-8eca-40f5-8f03-d303d53de5d1": "Je hebt geen toegangsrechten om deze leden te bekijken",
+  "5efbaed8-004e-40b9-a822-bdb31e35fbb7": "Je hebt geen toegangsrechten om alle leden te bekijken",
+  "45eedf49-0f0a-442c-a0bd-7881c2682698": "Je hebt geen toegang tot leden uit {groupName}",
+  "94e2d4ff-9b4b-4861-ba42-341ed67b32d8": "Je hebt geen toegangsrechten om deze inschrijvingen te bekijken",
+  "a3795bf6-ed50-4aa6-9caf-33820292c159": "De periode die je wilt instellen bestaat niet (meer)",
+  "b6bc2fef-71ac-43a1-b430-50945427a9e3": "De periode die je wilt instellen is reeds afgesloten",
+  "e0fff936-3f3c-46b8-adcf-c723c33907a2": "Het werkjaar die je wilt instellen is nog niet gestart",
+  "347463a0-1e9a-40fe-996c-d77ba13bc05b": "Dit werkjaar bestaat niet of is niet gekoppeld aan jouw organisatie.",
+  "2655c006-55af-47e6-959c-16acdb1917dc": "Het werkjaar dat je wilt instellen is nog niet gestart",
+  "44ff6618-ecbf-408b-9cc1-b1479e8ba8a2": "Het werkjaar dat je wilt instellen is al afgelopen",
+  "cc658db0-ee90-40fc-8a8c-1074a4f1f2f2": "Je kan geen wijzigingen meer aanbrengen in werkjaar {2000-2001} omdat deze is afgesloten.",
+  "c8e499c2-8d90-480c-a15e-d9da5291b40e": "Je hebt niet voldoende rechten om de custom code aan te passen.",
+  "938926c1-cb27-427d-aabd-638c5ec1d14a": "Inschrijvingen",
+  "331da9e3-2c97-4c70-a3d5-aa0ddb9625ad": "Tabel inschrijvingen",
+  "f0815834-0750-41d6-aa93-26203b2aedb6": "Geavanceerde instellingen voor webshops (code injection)",
+  "a2066dbc-3040-4c7d-a3f9-1f3580617542": "Totalen per combinatie",
+  "98237c41-e107-4997-a645-cc4c16bb5b9a": "Bundelkortingen",
+  "86fbcc70-2118-4399-9b7c-4461b8d40369": "Korting voor tweede of derde inschrijvingen.",
+  "badafccc-80ac-4716-87dc-0385f4741af7": "Geavanceerd",
+  "4b9e6ec2-a698-43b7-aa6e-be4b05dfd34e": "Je kan enkel code injecteren als je een eigen domeinnaam voor je webshop hebt ingesteld.",
+  "239382e0-0906-4e0f-ba1a-c58574b92e78": "Code injection",
+  "887a8ef4-989d-4dff-a565-d67fdcb95c48": "Deze code wordt toegevoegd aan de head tag van de webshop.",
+  "62db60da-ef20-4b61-8b69-4541deb5e8db": "Alle leden",
+  "0e21480d-5597-4337-bcee-5f4eba73fb7e": "onbekend",
+  "9c775d8c-1e2c-40c4-9f61-6be6cb6bd5bb": "Geef korting bij meerdere inschrijvingen van een lid of gezin, bv. voor broers of zussen die inschrijven voor een kamp, of leden die meerdere lessen volgen in hetzelfde werkjaar.",
+  "0a0f4ac1-1b0e-48f0-9f21-d1c77ec3f008": "Naamloos",
+  "9a7749d3-dac4-4baa-99e7-8048fe9ff743": "Nieuwe bundelkorting",
+  "1e050d5b-9e14-41ea-9334-9b11a10eedde": "Korting niet gevonden",
+  "ca70876e-5a32-40fe-9224-6e61ed055df6": "Een bundelkorting maak je aan en koppel je vervolgens aan één of meerdere activiteiten of inschrijvingsgroepen waarop die korting geldt. Afhankelijk van de ingestelde toepassingsregels krijgen leden dan korting voor de tweede, derde, vierde... inschrijving bij die ingestelde activiteiten of inschrijvinsgroepen.",
+  "2b00749a-bd88-4140-a074-79bf08d359fe": "Opgelet, als je een korting wijzigt of toevoegt heeft dit ook gevolgen voor bestaande inschrijvingen die deze korting al hadden gekregen / niet hadden gekregen. Test je kortingen goed uit en lees de beschrijvingen hieronder grondig.",
+  "c1ed9e16-70d4-4337-a4e1-ecf31ec00bed": "Geef de bundelkorting een duidelijke en korte naam. Deze naam zal zichtbaar zijn voor leden.",
+  "59a2cb2c-8935-42df-afab-6c5995e2cea3": "Geldt de korting ook voor gezinsleden?",
+  "1337c2d7-aec6-4ca9-be43-b211421b772a": "Nee, alleen per invividueel lid",
+  "09389428-111c-453b-8ed9-884e4b26fcb3": "Korting geldt alleen bij meerdere inschrijvingen van hetzelfde lid.",
+  "cafe0f16-604c-436e-b12e-ef6b0e9d2387": "Bijvoorbeeld: een lid krijgt korting als het zich inschrijft voor meerdere activiteiten of inschrijvingsgroepen.",
+  "7bf36754-abf8-40f0-a7f0-70439bbbecac": "Ja, ook voor gezinsleden",
+  "02a33069-e9a3-4477-a55b-e05a627976f1": "Korting geldt ook als gezinsleden zich inschrijven.",
+  "2509e2f2-111f-4eb5-8612-487dd62950a2": "Bijvoorbeeld: een broer of zus krijgt korting als een ander gezinslid al is ingeschreven.",
+  "6a21c1ba-b3fb-4a6f-983f-7f407a2a3f66": "Mag de korting gelden over verschillende activiteiten heen?",
+  "3ce43f2c-d59c-4cb7-8957-3508770fd5a8": "Ja, over alle gekoppelde activiteiten en inschrijvingsgroepen",
+  "b9b2c925-1396-4536-b883-6f7d82acfcb1": "Het aantal inschrijvingen voor alle gekoppelde activiteiten wordt samengeteld om de tweede, derde... inschrijving te bepalen",
+  "a7ec27e7-ec66-41da-ae2d-ea67fe8a088d": "Bijvoorbeeld: een lid krijgt korting op activiteit B als hetzelf of een familielid voor activiteit A, B, C... is ingeschreven",
+  "ea9dfea3-7c81-4b90-9d1a-aee6a9e34aea": "Nee, alleen binnen dezelfde activiteit of inschrijvingsgroep",
+  "374ffe63-707c-4e33-958b-30c91db2a527": "Korting geldt alleen bij meerdere inschrijvingen voor dezelfde activiteit.",
+  "fef46e6b-6dd7-406b-947e-8317a6736d68": "Bijvoorbeeld: een broer krijgt alleen korting op activiteit A als zijn zus ook op activiteit A is ingeschreven.",
+  "e3e20081-5971-478e-a69b-09b61fb858da": "Standaard korting",
+  "09087d69-6c29-447e-8d6c-0b1aac491afc": "Je kan hiervan afwijken door dit aan te passen bij de instellingen van de leeftijdsgroep of activiteit. De grootst mogelijke korting wordt steeds berekend.",
+  "98666406-d3e9-4c35-a1c8-d6dc80949866": "Activiteiten en inschrijvingsgroepen",
+  "1eb85876-5ca5-4388-9a1a-bfece589bdcf": "Hieronder vindt je een overzicht van alle activiteiten en inschrijvingsgroepen waarvoor deze bundelkorting is ingesteld. Je kan dit aanpassen bij de instellingen van de leeftijdsgroep of activiteit.",
+  "d64c7018-f8f5-4532-88b4-a1a29490a49c": "Er zijn geen groepen die aan deze bundelkorting gekoppeld zijn. Je kan activiteiten en groepen koppelen via de instellingen van elke activiteit of groep.",
+  "472a987d-498d-46b0-b925-3963f729492b": "Bundelkorting",
+  "c6be4ce9-199f-43cc-9c64-1b2ec1c83b80": "Geef je bundelkorting een naam",
+  "62397a8b-fcf1-404e-afef-d6cc49c577d6": "Aangepaste kortingen",
+  "d4db6f9b-ede7-4c60-b910-5ca947208d91": "Met aangepaste kortingen:",
+  "1363a154-392e-41a2-b18f-938fb72c3ef3": "Enkel voor tarieven:",
+  "f79934ca-a26c-4728-9a5f-c9cec74d6b90": "Ben je zeker dat je deze bundelkorting wilt verwijderen?",
+  "0f3a6e76-b5f2-4f92-b4e4-d709dffc1bde": "bv. Kampkorting broers en zussen",
+  "8822547e-03a0-4e70-bdce-9661a6c6f613": "Naam",
+  "2bd72941-dfeb-48a8-872a-16ef0aff1dc6": "Enkel op tarief {priceName}",
+  "24d2a5c1-fcc6-4209-9bd1-12f4e60f6ddc": "Inschrijvingen verzamelen",
+  "c74102fe-aa0c-4602-99d3-e6510e19632a": "Je kan de instellingen voor inschrijvingen (bv. prijs) wijzigen via het overzicht van de activiteit.",
+  "e4d49374-df2a-4fd7-863e-4a577e285cdc": "Lokale activiteit",
+  "f675d723-b1b9-4abd-9e7c-0459c24e474b": "Deze activiteit is enkel zichtbaar voor leden die inschreven zijn bij deze #groep.",
+  "ab00e79e-c7cb-4595-9119-4fb5ca366dd1": "Kies een #groep",
+  "a7c16100-f8b3-46a2-94fa-24cc4b693f32": "Je kan inschrijvingen voor deze activiteit momenteel niet uitschakelen omdat er al inschrijvingen zijn. Verwijder die eerst.",
+  "271299b8-7b44-40b8-a4ce-e345abf164cb": "Van welke #groep is deze activiteit?",
+  "28d8fecc-3639-467b-90d5-1ac8e82240df": "Acties",
+  "26667b28-4e39-4218-9f9b-131bf3bae6ab": "Inschrijvingen activeren",
+  "004bab40-945f-4f6d-8316-b0a8f2748f7a": "Manueel inschrijvingen bijhouden of leden online laten inschrijven.",
+  "cd37a13c-6779-49fa-a97f-1eddb6b61ebb": "Deze #groep is nog niet actief in dit werkjaar, maak dat eerst aan.",
+  "e8050ed2-af7e-4ffd-a9c9-e2fda7ef9bf5": "Inschrijvingen verzamelen voor deze activiteit?",
+  "3fa34288-9872-4c2b-af11-2d112b905eef": "Geen paniek, je inschrijvingen gaan nog niet meteen online staan. Je kan inschrijvinen later terug uitschakelen via de algemene instellingen van de activiteit.",
+  "ae9274f4-87fd-4221-bd81-3ff8b609eb4b": "Inschrijvingsdatum",
+  "6c7534a5-53c7-4343-b9e0-5277fe640496": "Bijhorend lid",
+  "4251f966-99ca-4ad8-ba39-9848aa67ecea": "Filter op de leden die bij de inschrijving horen",
+  "3ca1233b-86ba-4291-b0a2-68b0d96031dd": "Met bundelkortingen kan je korting geven op de tweede, derde, vierde... inschrijving. Een bundelkorting maak je aan en koppel je vervolgens aan één of meerdere activiteiten of inschrijvingsgroepen (of tarieven daarvan) waarop die korting geldt.",
+  "8545df6d-c416-42dc-88e6-df1eab5c41f9": "Terug standaard kortingsbedragen gebruiken",
+  "eab2f8ba-1f62-4328-a0b6-9593d3b6ca15": "Afwijkend",
+  "534fe662-2b92-479c-bb69-2155478673ed": "Andere kortingsbedragen instellen voor deze specifieke inschrijvingen",
+  "1adf61de-d2d5-45bd-a322-304107173992": "Wijzig bundelkortingen",
+  "69783c9e-0199-4e1b-be23-35625515167d": "Vanaf {index}e inschrijving",
+  "bfbdccd4-c432-4098-8980-a83ac6f6a76c": "Op {index}e inschrijving",
+  "b9912181-cf0a-4c85-bb9a-fc9ee7fa54f5": "Er was een internetprobleem bij het uploaden van het bestand. Controleer je internetverbinding en probeer het opnieuw.",
+  "2a44031f-dfa5-45df-824e-ba107d311c13": "Vul de andere gegevens aan",
+  "733d4169-a86f-425e-bb4b-15ce3af5aa60": "Kijk gegevens na",
+  "2a9075bb-a743-411e-8a3d-94e5e57363f0": "Doorgaan",
+  "eb3037bc-a195-41a8-ad30-947dce3ed73c": "{name} bestaat al in het systeem en werd hergebruikt in plaats van opnieuw aangemaakt.",
+  "d20e1a65-6c0d-4591-9dac-1abc01b9a563": "Lid definitief verwijderen",
+  "187d5767-969d-407a-a988-c3a9a831a0a8": "Je kan een sms naar maximaal {limit} leden sturen. Er zijn {count} leden geselecteerd.",
+  "b557c22d-d44e-43ad-9f05-de74d956c413": "Annulatiekost",
+  "892b70a8-6bba-4c41-9d82-b7db955f3aa2": "Proefperiode afgelopen op {date}",
+  "f21f3447-bb11-4474-8597-b9cae359faec": "Status",
+  "a8fc4892-7a37-4748-9249-3499524ad288": "Verschuldigd",
+  "21ae7df0-9833-46e7-9735-ffabf99f8cdd": "Geannuleerd",
+  "7fb9593e-9937-4c47-ba0f-fb79a5ba3d87": "Verrekend op",
+  "f70ecedf-608c-4330-89e6-8e0a7a5ac264": "Saldoverrekening",
+  "f3f810dd-cd4b-4766-b19e-ec995c9cca77": "Maak een saldoverrekening aan met een totaalprijs van 0 euro die negatieve en positieve items combineert om de openstaande rekening te vereenvoudigen.",
+  "aeed7048-efaa-410d-bec1-796b5fe581a6": "Hoeveel nu betalen?",
+  "1d864313-d956-41b6-b95b-77227297fb0e": "Hoeveel terugbetalen?",
+  "0acc0348-ae29-444b-a93f-5d513247eff6": "Slechts deel betalen",
+  "4bd1a990-6f9b-4949-90be-3f0898c4e298": "Onzichtbaar",
+  "c393d4d3-9cc2-4da8-a8ae-569f48412e12": "Niet bewerkbaar voor leden",
+  "1ece4680-9858-4f37-b6b1-7a3b872d3cd6": "Onzichtbaar voor leden",
+  "6b029bcd-5605-42c5-a5db-38f40ab70214": "Geen inschrijvingen",
+  "2428a4da-4d23-4ff3-9194-9dbe17134dcc": "Unieke identificatie van de inschrijving",
+  "766a39be-a4af-4a04-baf0-1f064d2fed16": "Ongedaan maken korting",
+  "40939025-cebb-4afb-90e9-847233cb256f": "Korting",
+  "4d5cd18a-ad96-4b2b-aa91-80af307cb8cd": "Naam van de korting geassocieerd aan dit item",
+  "43c1d02d-ca64-4809-95d6-50491c712cbb": "Korting als meerdere gezinsleden inschrijven voor dezelfde inschrijvingsgroep/activiteit.",
+  "d098add1-c1b8-44d1-bf96-d762db3ea3cc": "Korting voor gezinsleden die inschrijven voor verschillende inschrijvingsgroepen/activiteiten met deze korting.",
+  "200b5e3d-93d1-4c1c-80be-6eb0f2f75793": "Korting voor hetzelfde lid dat inschrijven voor meerdere inschrijvingsgroepen/activiteiten met deze korting.",
+  "d3c259e4-4f8b-4f2f-9051-a943ef41dbd2": "Geen korting, maar telt mee in aantal",
+  "cb8ccc1d-7ec0-4c9d-bf02-6759109324ce": "{5%} korting op de {2}e en volgende inschrijvingen",
+  "4eda3d41-73fe-4063-8036-ccbd7290deaf": "{5%} korting op de {2}e inschrijving",
+  "57109b34-1238-4e62-84a0-14a81d7c2bfa": "Niet ingeschreven",
+  "e0883f65-bd4d-4faa-aba2-71d96001fe42": "De totaalprijs is negatief, maak de nodige aanpassingen aan je winkelmandje zodat het totaalbedrag minstens 0 is.",
+  "3a50492b-087a-4a83-a386-4d30fabbc3c2": "Reeds aangerekend",
+  "aaa4eb2d-cae9-4c5d-8e6a-7e1ee3709689": "Annuleringskosten"
 }
