--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5064,7 +5064,7 @@
   "bfbdccd4-c432-4098-8980-a83ac6f6a76c": "Op {index}e inschrijving",
   "b9912181-cf0a-4c85-bb9a-fc9ee7fa54f5": "Er was een internetprobleem bij het uploaden van het bestand. Controleer je internetverbinding en probeer het opnieuw.",
   "2a44031f-dfa5-45df-824e-ba107d311c13": "Vul de andere gegevens aan",
-  "733d4169-a86f-425e-bb4b-15ce3af5aa60": "Kijk gegevens na",
+  "733d4169-a86f-425e-bb4b-15ce3af5aa60": "Kijk de gegevens nog even na",
   "2a9075bb-a743-411e-8a3d-94e5e57363f0": "Doorgaan",
   "eb3037bc-a195-41a8-ad30-947dce3ed73c": "{name} bestaat al in het systeem en werd hergebruikt in plaats van opnieuw aangemaakt.",
   "d20e1a65-6c0d-4591-9dac-1abc01b9a563": "Lid definitief verwijderen",
