--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5026,7 +5026,7 @@
   "374ffe63-707c-4e33-958b-30c91db2a527": "Korting geldt alleen bij meerdere inschrijvingen voor dezelfde activiteit.",
   "fef46e6b-6dd7-406b-947e-8317a6736d68": "Bijvoorbeeld: een broer krijgt alleen korting op activiteit A als zijn zus ook op activiteit A is ingeschreven.",
   "e3e20081-5971-478e-a69b-09b61fb858da": "Standaard korting",
-  "09087d69-6c29-447e-8d6c-0b1aac491afc": "Je kan hiervan afwijken door dit aan te passen bij de instellingen van de leeftijdsgroep of activiteit. De grootst mogelijke korting wordt steeds berekend.",
+  "09087d69-6c29-447e-8d6c-0b1aac491afc": "Je kan hiervan afwijken door dit aan te passen bij de instellingen van de leeftijdsgroep of activiteit.",
   "98666406-d3e9-4c35-a1c8-d6dc80949866": "Activiteiten en inschrijvingsgroepen",
   "1eb85876-5ca5-4388-9a1a-bfece589bdcf": "Hieronder vindt je een overzicht van alle activiteiten en inschrijvingsgroepen waarvoor deze bundelkorting is ingesteld. Je kan dit aanpassen bij de instellingen van de leeftijdsgroep of activiteit.",
   "d64c7018-f8f5-4532-88b4-a1a29490a49c": "Er zijn geen groepen die aan deze bundelkorting gekoppeld zijn. Je kan activiteiten en groepen koppelen via de instellingen van elke activiteit of groep.",
