Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5097,5 +5097,33 @@
   "57109b34-1238-4e62-84a0-14a81d7c2bfa": "Niet ingeschreven",
   "e0883f65-bd4d-4faa-aba2-71d96001fe42": "De totaalprijs is negatief, maak de nodige aanpassingen aan je winkelmandje zodat het totaalbedrag minstens 0 is.",
   "3a50492b-087a-4a83-a386-4d30fabbc3c2": "Reeds aangerekend",
-  "aaa4eb2d-cae9-4c5d-8e6a-7e1ee3709689": "Annuleringskosten"
+  "aaa4eb2d-cae9-4c5d-8e6a-7e1ee3709689": "Annuleringskosten",
+  "9a647173-e10c-43b2-95c3-df882abb0c64": "Exporteren naar PDF",
+  "a34d3022-7f12-4524-b68f-b484dc9201ae": "Dit document kan niet worden geëxporteerd",
+  "afea127c-30ec-4df7-8842-90aca44f9fbf": "Kenmerken per lid",
+  "f287ceb4-a4d4-4c1a-8cfb-eecc8801b7aa": "Selecteer hier alle kenmerken die je in de samenvatting wilt oplijsten, gegroepeerd per lid.",
+  "8cb4ddeb-fddc-42d7-9947-e9689ff2e8a3": "Leden oplijsten per categorie",
+  "332e65fb-28b4-4bde-a391-a7b1d3492fe2": "Je kan ook leden oplijsten per categorie, eventueel met extra opmerkingen erbij (bv. bij aanvinkvakjes met opmerkingen).",
+  "31fdca2d-cec9-4771-b57d-51ba6829f595": "Samenvatting",
+  "4f68e4bc-4432-4655-b20e-84e6550eda48": "ja",
+  "b21855f6-2e9f-4b57-bfe8-05dc38fc330d": "nee",
+  "5b0672f0-f376-4306-9161-b2b840b723c2": "Bewaar dit document op een veilige plaats en vernietig het na gebruik.",
+  "6b6d6629-eefa-4d53-b669-7a7c0e7d7e12": "Geen leden",
+  "bca39843-792e-4e94-b1e9-a9fcf2908d05": "Filter op bestellingen die minstens één artikel in het winkelmandje hebben die aan deze voorwaarden voldoet",
+  "db51d1ac-29aa-46f6-a77e-29a4f66ca74b": "tarieven",
+  "ab3e4560-a403-4a20-8dab-c76eb74794cc": "Winkelmandje",
+  "f2931d71-6e65-4b80-8c44-ac1cc328c2bd": "Aantal stuks",
+  "bc0d5675-c4e8-48d8-ba51-557e7a95690f": "Artikel",
+  "d241c647-1fd2-4ce4-8356-3891abca19e9": "Afhaal/leveringsmethode",
+  "b9f2cf39-1f26-4b7c-b949-0474fa9f2f01": "Excel...",
+  "3bfdcad4-7201-4b4e-9244-5ec22c6e4ce9": "PDF...",
+  "03903ede-4f60-4358-8709-bfc814ee5b17": "Je kan maximaal {limit} leden exporteren naar pdf. Er zijn {count} leden geselecteerd.",
+  "4fdfb042-ccbb-465e-b56c-e1686473e4cc": "Lidnummer",
+  "74956434-5a54-4a93-82df-08533d1a6963": "Geen toestemming verzamelen gevoelige gegevens",
+  "e81e0ffa-8ed9-4382-bc07-479728006648": "aangevinkt",
+  "8abc595b-a705-499b-b4a2-17cb3cf99e47": "niet aangevinkt",
+  "e4603a61-7e45-4ca4-99b2-4e4208f127d1": "Als je ook de oudergegevens inschakelt, wordt zowel het rijksregisternummer van het lid als dat van de ouders gevraagd (minstens één ouder).",
+  "02e77c23-5f98-44fb-86f5-ff9d511af299": "Geen internetverbinding. Klik om te herladen.",
+  "5b6de81b-821a-43be-b8dc-be19fc4701f8": "Geen internetverbinding",
+  "891b75ee-e85e-4f9b-9a03-39082d248b87": "Opnieuw proberen"
 }
