--- a/shared/locales/src/consistent-words-en.json
+++ b/shared/locales/src/consistent-words-en.json
@@ -90,5 +90,6 @@
     "beschikbaar": "available",
     "sjabloon": "template",
     "niveau": "level",
-    "indiener": "petitioner"
+    "indiener": "petitioner",
+    "bundelkorting": "bundle discount"
   }
