--- a/shared/locales/src/consistent-words-fr.json
+++ b/shared/locales/src/consistent-words-fr.json
@@ -22,5 +22,6 @@
     "ledenportaal": "portail des membres",
     "rechten": "droits",
     "sjabloon": "modèle",
-    "fiscale attesten": "attestations fiscales"
+    "fiscale attesten": "attestations fiscales",
+    "bundelkorting": "réduction pour plusieurs inscriptions"
   }
