--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -3411,6 +3411,10 @@
     "original": "Geen activiteiten gevonden",
     "translation": "Aucune activité trouvée"
   },
+  "2a50d0e8-bdb9-4016-84be-b0de6e26ca14": {
+    "original": "Exporteren naar",
+    "translation": "Exporter vers"
+  },
   "2a53e6f7-a6eb-4adf-a218-f28de686d188": {
     "original": "Verifieer jouw nieuwe e-mailadres via de link in de e-mail, daarna passen we het automatisch aan.",
     "translation": "Vérifiez votre nouvelle adresse e-mail via le lien dans l'e-mail, puis nous l'adapterons automatiquement."
@@ -4370,6 +4374,10 @@
   "367d239e-3b54-4eb0-b6bd-9c994f3f9523": {
     "original": "Net voor het betalen van inschrijvingen is het mogelijk om te vragen of een gezin wenst gebruik te maken van financiële ondersteuning. Of dat aanstaat kan je op verschillende niveau's configureren, o.a. via 'Gegevens van leden'. Maar als het ingeschakeld is, bepaal je hier hoe het werkt voor alle groepen.",
     "translation": "Juste avant le paiement des inscriptions, il est possible de demander si une famille souhaite bénéficier d'un soutien financier. Vous pouvez configurer cela à différents niveaux, notamment via « Données des membres ». Mais s'il est activé, vous définissez ici son fonctionnement pour tous les groupes."
+  },
+  "36817a3d-6e32-40ae-bec5-a3b912f1b65c": {
+    "original": "Alles selecteren",
+    "translation": "Tout sélectionner"
   },
   "3686816f-e3c4-4d60-8e87-1f323dba4547": {
     "original": "Geverifieerd",
