Updated translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5128,5 +5128,13 @@
   "891b75ee-e85e-4f9b-9a03-39082d248b87": "Opnieuw proberen",
   "f9015fbd-7b3f-450b-b54a-25f017bb8d86": "Toepassingsregels",
   "36817a3d-6e32-40ae-bec5-a3b912f1b65c": "Alles selecteren",
-  "2a50d0e8-bdb9-4016-84be-b0de6e26ca14": "Exporteren naar"
+  "2a50d0e8-bdb9-4016-84be-b0de6e26ca14": "Exporteren naar",
+  "f0bd2c38-5490-4e28-a336-65c998cf3276": "Dag",
+  "2727f83e-20ba-436e-8449-1e6f3e15c628": "Maand",
+  "4e99ee6d-2445-4d3a-ab0f-343236295366": "Jaar",
+  "006de532-e3d1-4567-8def-48c99477d65e": "Deze categorie is leeg en zal nog niet getoond worden.",
+  "270c18bf-7852-4d33-809d-6567c4bd56a9": "Vragenlijst bewerken",
+  "770518af-b094-4fca-bc0a-641f508895ef": "Categorie bewerken",
+  "f443476a-44f5-4dda-8c39-50332319d9ec": "Vul een naam in",
+  "b5822ffa-2c8b-4c88-bf4d-eb5566da56e7": "Nieuwe categorie"
 }
